[package]
name = "frontmatter"
version = "0.3.0"
description = "A Fairly Trivial Wrapper for yaml-rust to Extract Frontmatter from a String Slice"
authors = ["Patrick Barrett <patrick@mkii.org>"]
repository = "https://github.com/azdle/rust-frontmatter"
license = "MIT/Apache-2.0"

[dependencies]
yaml-rust = "0.3"
